@@ -19,19 +19,19 @@
 package org.apache.hadoop.hbase.wal;
 
 import java.io.IOException;
-
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.fs.Path;
-import org.apache.hadoop.hbase.HConstants;
-import org.apache.hadoop.hbase.classification.InterfaceAudience;
-import org.apache.hadoop.hbase.classification.InterfaceStability;
-// imports for things that haven't moved from regionserver.wal yet.
 import org.apache.hadoop.hbase.regionserver.wal.FSHLog;
 import org.apache.hadoop.hbase.regionserver.wal.ProtobufLogWriter;
+import org.apache.hadoop.hbase.regionserver.wal.WALUtil;
+import org.apache.hadoop.hbase.util.CommonFSUtils;
+import org.apache.hadoop.hbase.util.CommonFSUtils.StreamLacksCapabilityException;
 import org.apache.hadoop.hbase.util.FSUtils;
+import org.apache.yetus.audience.InterfaceAudience;
+import org.apache.yetus.audience.InterfaceStability;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * A WAL provider that use {@link FSHLog}.
@@ -40,28 +40,55 @@ import org.apache.hadoop.hbase.util.FSUtils;
 @InterfaceStability.Evolving
 public class FSHLogProvider extends AbstractFSWALProvider<FSHLog> {
 
-  private static final Log LOG = LogFactory.getLog(FSHLogProvider.class);
+  private static final Logger LOG = LoggerFactory.getLogger(FSHLogProvider.class);
 
   // Only public so classes back in regionserver.wal can access
   public interface Writer extends WALProvider.Writer {
-    void init(FileSystem fs, Path path, Configuration c, boolean overwritable) throws IOException;
+    /**
+     * @throws IOException if something goes wrong initializing an output stream
+     * @throws StreamLacksCapabilityException if the given FileSystem can't provide streams that
+     *         meet the needs of the given Writer implementation.
+     */
+    void init(FileSystem fs, Path path, Configuration c, boolean overwritable, long blocksize)
+        throws IOException, CommonFSUtils.StreamLacksCapabilityException;
   }
 
   /**
-   * public because of FSHLog. Should be package-private
+   * Public because of FSHLog. Should be package-private
+   * @param overwritable if the created writer can overwrite. For recovered edits, it is true and
+   *          for WAL it is false. Thus we can distinguish WAL and recovered edits by this.
    */
   public static Writer createWriter(final Configuration conf, final FileSystem fs, final Path path,
       final boolean overwritable) throws IOException {
+    return createWriter(conf, fs, path, overwritable,
+      WALUtil.getWALBlockSize(conf, fs, path, overwritable));
+  }
+
+  /**
+   * Public because of FSHLog. Should be package-private
+   */
+  public static Writer createWriter(final Configuration conf, final FileSystem fs, final Path path,
+    final boolean overwritable, long blocksize) throws IOException {
     // Configuration already does caching for the Class lookup.
-    Class<? extends Writer> logWriterClass = conf.getClass("hbase.regionserver.hlog.writer.impl",
-      ProtobufLogWriter.class, Writer.class);
+    Class<? extends Writer> logWriterClass =
+        conf.getClass("hbase.regionserver.hlog.writer.impl", ProtobufLogWriter.class,
+            Writer.class);
     Writer writer = null;
     try {
-      writer = logWriterClass.newInstance();
-      writer.init(fs, path, conf, overwritable);
+      writer = logWriterClass.getDeclaredConstructor().newInstance();
+      FileSystem rootFs = FileSystem.get(path.toUri(), conf);
+      writer.init(rootFs, path, conf, overwritable, blocksize);
       return writer;
     } catch (Exception e) { 
-      LOG.debug("Error instantiating log writer.", e);            
+      if (e instanceof CommonFSUtils.StreamLacksCapabilityException) {
+        LOG.error("The RegionServer write ahead log provider for FileSystem implementations " +
+            "relies on the ability to call " + e.getMessage() + " for proper operation during " +
+            "component failures, but the current FileSystem does not support doing so. Please " +
+            "check the config value of '" + CommonFSUtils.HBASE_WAL_DIR + "' and ensure " +
+            "it points to a FileSystem mount that has suitable capabilities for output streams.");
+      } else {
+        LOG.debug("Error instantiating log writer.", e);
+      }
       if (writer != null) {
         try{
           writer.close();
@@ -75,9 +102,10 @@ public class FSHLogProvider extends AbstractFSWALProvider<FSHLog> {
 
   @Override
   protected FSHLog createWAL() throws IOException {
-    return new FSHLog(FSUtils.getWALFileSystem(conf), FSUtils.getWALRootDir(conf),
-        getWALDirectoryName(factory.factoryId), HConstants.HREGION_OLDLOGDIR_NAME, conf, listeners,
-        true, logPrefix, META_WAL_PROVIDER_ID.equals(providerId) ? META_WAL_PROVIDER_ID : null);
+    return new FSHLog(CommonFSUtils.getWALFileSystem(conf), CommonFSUtils.getWALRootDir(conf),
+        getWALDirectoryName(factory.factoryId),
+        getWALArchiveDirectoryName(conf, factory.factoryId), conf, listeners, true, logPrefix,
+        META_WAL_PROVIDER_ID.equals(providerId) ? META_WAL_PROVIDER_ID : null);
   }
 
   @Override
