@@ -22,17 +22,16 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.hbase.HBaseConfiguration;
 import org.apache.hadoop.hbase.regionserver.HStore;
+import org.apache.hadoop.hbase.regionserver.HStoreFile;
 import org.apache.hadoop.hbase.regionserver.StoreConfigInformation;
-import org.apache.hadoop.hbase.regionserver.StoreFile;
 import org.apache.hadoop.hbase.testclassification.MediumTests;
 import org.apache.hadoop.hbase.testclassification.RegionServerTests;
 import org.apache.hadoop.hbase.util.ReflectionUtils;
@@ -44,9 +43,6 @@ import org.junit.runners.Parameterized;
 @Category({RegionServerTests.class, MediumTests.class})
 @RunWith(Parameterized.class)
 public class PerfTestCompactionPolicies extends MockStoreFileGenerator {
-
-
-  private static final Log LOG = LogFactory.getLog(PerfTestCompactionPolicies.class);
 
   private final RatioBasedCompactionPolicy cp;
   private final StoreFileListGenerator generator;
@@ -62,13 +58,13 @@ public class PerfTestCompactionPolicies extends MockStoreFileGenerator {
 
 
 
-    Class[] policyClasses = new Class[]{
+    Class<?>[] policyClasses = new Class[]{
         EverythingPolicy.class,
         RatioBasedCompactionPolicy.class,
         ExploringCompactionPolicy.class,
     };
 
-    Class[] fileListGenClasses = new Class[]{
+    Class<?>[] fileListGenClasses = new Class[]{
         ExplicitFileListGenerator.class,
         ConstantSizeFileListGenerator.class,
         SemiConstantSizeFileListGenerator.class,
@@ -88,12 +84,12 @@ public class PerfTestCompactionPolicies extends MockStoreFileGenerator {
         * policyClasses.length);
 
 
-    for (Class policyClass :  policyClasses) {
-      for (Class genClass: fileListGenClasses) {
-        for (int maxFile:maxFileValues) {
-          for (int minFile:minFilesValues) {
-            for (float ratio:ratioValues) {
-              params.add(new Object[] {policyClass, genClass, maxFile, minFile, ratio});
+    for (Class<?> policyClass : policyClasses) {
+      for (Class<?> genClass : fileListGenClasses) {
+        for (int maxFile : maxFileValues) {
+          for (int minFile : minFilesValues) {
+            for (float ratio : ratioValues) {
+              params.add(new Object[] { policyClass, genClass, maxFile, minFile, ratio });
             }
           }
         }
@@ -115,7 +111,8 @@ public class PerfTestCompactionPolicies extends MockStoreFileGenerator {
       final Class<? extends StoreFileListGenerator> fileGenClass,
       final int inMmax,
       final int inMin,
-      final float inRatio) throws IllegalAccessException, InstantiationException {
+      final float inRatio) throws IllegalAccessException, InstantiationException,
+      NoSuchMethodException, InvocationTargetException {
     super(PerfTestCompactionPolicies.class);
     this.fileGenClass = fileGenClass;
     this.max = inMmax;
@@ -143,16 +140,16 @@ public class PerfTestCompactionPolicies extends MockStoreFileGenerator {
         new Class[] {Configuration.class, StoreConfigInformation.class },
         new Object[] {configuration, store });
 
-    this.generator = fileGenClass.newInstance();
+    this.generator = fileGenClass.getDeclaredConstructor().newInstance();
     // Used for making paths
   }
 
   @Test
   public final void testSelection() throws Exception {
     long fileDiff = 0;
-    for (List<StoreFile> storeFileList : generator) {
-      List<StoreFile> currentFiles = new ArrayList<>(18);
-      for (StoreFile file : storeFileList) {
+    for (List<HStoreFile> storeFileList : generator) {
+      List<HStoreFile> currentFiles = new ArrayList<>(18);
+      for (HStoreFile file : storeFileList) {
         currentFiles.add(file);
         currentFiles = runIteration(currentFiles);
       }
@@ -172,21 +169,20 @@ public class PerfTestCompactionPolicies extends MockStoreFileGenerator {
   }
 
 
-  private List<StoreFile> runIteration(List<StoreFile> startingStoreFiles) throws IOException {
-
-    List<StoreFile> storeFiles = new ArrayList<>(startingStoreFiles);
-    CompactionRequest req = cp.selectCompaction(
+  private List<HStoreFile> runIteration(List<HStoreFile> startingStoreFiles) throws IOException {
+    List<HStoreFile> storeFiles = new ArrayList<>(startingStoreFiles);
+    CompactionRequestImpl req = cp.selectCompaction(
         storeFiles, new ArrayList<>(), false, false, false);
     long newFileSize = 0;
 
-    Collection<StoreFile> filesToCompact = req.getFiles();
+    Collection<HStoreFile> filesToCompact = req.getFiles();
 
     if (!filesToCompact.isEmpty()) {
 
       storeFiles = new ArrayList<>(storeFiles);
       storeFiles.removeAll(filesToCompact);
 
-      for (StoreFile storeFile : filesToCompact) {
+      for (HStoreFile storeFile : filesToCompact) {
         newFileSize += storeFile.getReader().length();
       }
 
